force-app/main/default/objects/conference360__Staff__c/conference360__Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <displayFormat>STAFF-{000000}</displayFormat>
        <label>Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>