force-app/main/default/objects/conference360__Staff__c/fields/conference360__User__c.field-meta.xml
<CustomField>
    <fullName>conference360__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Staff member has a Salesforce User record, use this lookup.</description>
    <inlineHelpText>If the Staff member has a Salesforce User record, use this lookup.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff</relationshipName>
    <type>Lookup</type>
</CustomField>